# claif-api

./: .env-sample  .gitignore  README.md  docker-compose.yaml
k8s/: Makefile
k8s/clusters/local/dev/: Makefile
k8s/clusters/local/dev/apps/: adminer-deployment.yaml  api-gateway-deployment.yaml  claif-api-deployment.yaml  claif-db-configmap.yaml  claif-db-deployment.yaml  deployment.yaml  keycloak-configmap.yaml  keycloak-db-deployment.yaml  pv.yaml  (+5 more)
src/claif-api/: Dockerfile  main.py  pyproject.toml  requirements.txt  seed_database.sh  seed_db.sh  wait-for-db-availability.sh  wait_for_db_availability.sh  wait_for_keycloak.sh
src/claif-api/audio_recording_samples/: frankenstein_passage_two_speakers_medium_quality.m4a
src/claif-api/claif_cli/: annotation_reviews.py  api_requests.py  audio_files.py  auth_utils.py  display_utils.py  main.py  recordings.py  requests.py
src/claif-api/cli_tool/: claif_cli.py
src/claif-api/models/: annotation_reviews.py  annotations.py  audio_recordings.py  base_models.py  deletion_requests.py  recordings.py  schema.py  terminal_recordings.py  users.py
src/claif-api/models/utils/: schema.py  terminal_recordings.py
src/claif-api/routers/: annotation_reviews.py  annotations.py  audio_files.py  auth.py  terminal_recordings.py  users.py
src/claif-api/routers/terminal_recordings/: terminal_recordings.py
src/claif-api/scripts/: seed_users.py  truncate_and_reset.py  wait_for_db.sh  wait_for_keycloak.sh  wait_for_minio.sh
src/claif-api/seed_scripts/: terminal_recordings.py  truncate_and_reset.py  users.py
src/claif-api/tests/: conftest.py  test_0_users.py  test_1_terminal_recordings.py  test_3_audio_files.py  test_9_cli_tool.py  test_annotations.py  test_integration.py
src/claif-api/tests/utils/: cli_test_helpers.py  config.py
src/claif-api/utils/: _logging.py  auth.py  database.py  encoding.py  env.py  exception_handlers.py  fastapi.py  files.py  logging.py  minio_utils.py  schema.py
src/claif-api/utils/models/: asciinema_recordings.py  terminal_recordings.py
src/claif-db/: init-user-db.sh
src/claif-transcriber/: Dockerfile  main.py  pyproject.toml
src/keycloak/: create-user.sh  fastapi-realm-export.json  import-dev-settings.sh  setup.sh
src/swagger/: swagger.yaml
(+9 files in other folders)
