[tool.poetry]
name = "claif-api"
version = "0.1.0"
description = "CopyLeft AI Foundation Audio Transcriber"
authors = ["Zach Huberty <10377254+zhuberty@users.noreply.github.com>"]
license = "GPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "0.115.0"
uvicorn = {version = "0.30.6", extras = ["standard"]}
pydantic = "1.10.18"
minio = "7.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
